PLAT-71626: Fix navigation button alignment in MapController
Enact-DCO-1.0-Signed-off-by: Stephen Choi <stephen.choi@lge.com>

--- a/console/src/components/MapController/MapController.less
+++ b/console/src/components/MapController/MapController.less
@@ -39,4 +39,8 @@
 	> * {
 		pointer-events: auto;
 	}
+
+	p {
+		margin: 12px;
+	}
 }
